# hrc_compact_view

./: README.md  pyproject.toml
hrc_compact_view/: hooks.py  modules.txt
